<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/originalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/originalTitle"
        />
    <TextView
        android:id="@+id/originalTitleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        />
    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/adult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        />
    <TextView
        android:id="@+id/adultDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/backDropImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backDropImage"
        />

        <ImageView
            android:id="@+id/backDropImageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/mediaType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediaType"
        />
    <TextView
        android:id="@+id/mediaTypeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        />
    <TextView
        android:id="@+id/languageDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        />
    <TextView
        android:id="@+id/overviewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        />
    <TextView
        android:id="@+id/popularityDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/posterImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/posterImage"
        />

        <ImageView
            android:id="@+id/posterImageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/releaseDate"
        />
    <TextView
        android:id="@+id/releaseDateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video"
        />
    <TextView
        android:id="@+id/videoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/voteAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voteAverage"
        />
    <TextView
        android:id="@+id/voteAverageDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/voteCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voteCount"
        />
    <TextView
        android:id="@+id/voteCountDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

</LinearLayout>